Fixed z-index multiple times issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -262,7 +262,6 @@
   position: absolute;
   top: 0;
   right: -124px;
-  z-index: 0;
 }
 
 .footer {
